link of the pdf updated

--- a/P_KellyDeli/Tutoriels/Tutoriels css - kd-main.css
+++ b/P_KellyDeli/Tutoriels/Tutoriels css - kd-main.css
@@ -7,11 +7,10 @@
 }
 
 
-
-.fa-play:before{
+.fa-video-camera{
     color:#B1C900;
 }
 
-.fa-file-pdf-o:before{
-    color:#B1C900;
+.fa-file-pdf-o{
+    color:red;
 }
